# Open-Terminal

./: .cursorrules  .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  setup.sh
.claude/commands/: finn-build.md  finn-review.md  finn-scout.md  finn-spec.md
.github/ISSUE_TEMPLATE/: config.yml
.github/scripts/: generate_updates_manifest.py  sync_scripts.sh
.github/workflows/: build-cpp.yml  lint.yml  regression.yml  release.yml  sanitizers.yml  test-setup.yml
docs/: ALPHA_ARENA.md  ARCHITECTURE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CPP_CONTRIBUTOR_GUIDE.md  CRYPTO_WALLET_CONNECT.md  GETTING_STARTED.md  PYTHON_CONTRIBUTOR_GUIDE.md  WALLET_SECURITY.md
finn/: BACKLOG-CANDIDATES.md  CHARTER.md  JOURNAL.md  README.md  ROADMAP.md
openmarketterminal-qt/: .clang-format  .clang-tidy  .cppcheck-suppressions  CMakeLists.txt  CMakePresets.json  run-tidy-changed.sh
openmarketterminal-qt/cmake/: prune_scripts_junk.cmake  sync_scripts.cmake
openmarketterminal-qt/docs/: AI_LIVE_NOT_FOR_ARMING.md  ANGELONE_QT_CROSSCHECK.md  CRYPTO_AUTO_SCALP_RUNBOOK.md  DATAHUB_TOPICS.md  KALSHI_AUTOMATION_RUNBOOK.md  MCP_TOOLS_GUIDE.md  MEMORY.md  ai-chat-example-prompts.md  backtesting-provider-process.md
openmarketterminal-qt/docs/agentic-research/: README.md
openmarketterminal-qt/docs/datahub-phases/: phase-02-market-data-pilot.md  phase-04-websocket-producers.md  phase-07-broker-account-streams.md  phase-09-ai-mcp-agents.md  phase-10-enforcement-cleanup.md
openmarketterminal-qt/docs/design/: 2026-06-14-ai-trading-substrate-design.md  2026-06-14-ai-trading-substrate-phaseA-plan.md  2026-06-14-bridge-offthread-dispatch-design.md  2026-06-14-bridge-offthread-dispatch-plan.md  2026-06-14-openterminalcli-design.md  2026-06-14-openterminalcli-phase2-headless-design.md  2026-06-14-openterminalcli-phase2a-plan.md  2026-06-14-openterminalcli-phase2b-plan.md  2026-06-14-openterminalcli-phase2b-widen-design.md  2026-06-14-openterminalcli-phase3-daemon-design.md  2026-06-14-openterminalcli-phase3-daemon-plan.md  2026-06-14-openterminalcli-plan.md  2026-06-15-ai-activity-feed-design.md  2026-06-15-ai-activity-feed-plan.md  2026-06-15-ai-trading-substrate-phaseB-design.md  2026-06-15-ai-trading-substrate-phaseB-plan.md  2026-06-15-ai-trading-substrate-phaseC-design.md  2026-06-15-ai-trading-substrate-phaseC-plan.md  2026-06-15-fast-live-mode-design.md  2026-06-15-fast-live-mode-plan.md  2026-06-15-ibkr-conid-resolution-plan.md  2026-06-15-paper-strategy-loop-design.md  2026-06-15-paper-strategy-loop-plan.md  2026-06-16-alpaca-options-design.md  2026-06-16-alpaca-options-plan.md  2026-06-16-claude-mcp-adapter-design.md  2026-06-16-claude-mcp-adapter-plan.md  2026-06-16-crypto-account-execution-design.md  2026-06-16-crypto-account-execution-plan.md  2026-06-17-local-model-tools-web-browsing-design.md  2026-06-17-local-model-tools-web-browsing-plan.md  2026-07-06-sandbox-core-plan.md  2026-07-06-sandbox-p0-fixes-plan.md  2026-07-06-strategy-sandbox-design.md  2026-07-07-portfolio-account-sync-design.md  (+13 more)
openmarketterminal-qt/resources/: app.rc.in  component_catalog.json  demo_portfolio.json  openmarketterminal.icns  requirements-numpy1.txt  requirements-numpy2.txt
openmarketterminal-qt/scripts/: .!84986!country_codes_only.txt  README.md  ainvest_data.py  apply_portfolio_translations.py  article_extract.py  baostock_data.py  bcb_data.py  bea_data.py  bis_data.py  bls_data.py  bnm_data.py  bnr_data.py  boc_data.py  boi_data.py  build_akshare_symbols_db.py  canada_gov_api.py  cboe_data.py  cftc_data.py  cnb_data.py  congress_gov_data.py  crossref_data.py  crypto_scalp_report.py  data_gov_hk_api.py  databento_provider.py  datagov_au_api.py  datagovuk_api.py  edgar_financials.py  edge_ic_report.py  estat_japan_api.py  faostat_data.py  fdic_fetcher.py  federal_reserve_data.py  fill_dashboard_chrome.ps1  fill_portfolio_core.ps1  fiscal_data.py  fix_numerus_translations.py  fmp_data.py  fred_economic_data.py  french_gov_api.py  geocoding_service.py  (+51 more)
openmarketterminal-qt/tests/: CMakeLists.txt  e2e_attach_smoke.sh  e2e_daemon_smoke.sh  e2e_fast_live.sh  e2e_headless_categories.sh  e2e_headless_smoke.sh  e2e_live_trade.sh  e2e_paper_trade.sh  e2e_pm_paper_trade.sh  e2e_sandbox_smoke.sh  e2e_strategy_loop.sh  sandbox_boundary_check.sh  test_alpha_arena.py  test_crypto_dataset.py  test_crypto_fast_router.py  test_crypto_scalp_report.py  test_edgar_financials_adapter.py  test_edge_ic_report.py  test_hft_terminal_source.py  test_kalshi_advisor_core.py  test_kalshi_competition.py  test_kalshi_strategy.py  test_model_retrain.py  test_openterminal_paths.py  test_prediction_kalshi_queue.py  test_prediction_kalshi_settlements.py  test_relationship_map_edgar.py  test_sign_release_probe.sh  test_signal_publisher.py  test_spot_calibrator.py  test_terminal_bridge_layers.py  test_ws_stream_account.py  tst_account_sync_reconcile.cpp  tst_account_sync_service.cpp  tst_advisor_canary_presentation.cpp  tst_advisory_protocol.cpp  tst_advisory_repository.cpp  tst_advisory_scoring.cpp  tst_ai_activity.cpp  tst_ai_handler_repository.cpp  (+97 more)
openmarketterminal-qt/tests/fixtures/: coinbase_adv_candles.json  coinbase_adv_ticker.json  ddg_results.html
openmarketterminal-qt/tests/mcp_adapter/: test_openterminal_mcp.py
openmarketterminal-qt/translations/: openmarketterminal_de_DE.ts  openmarketterminal_es_ES.ts  openmarketterminal_fr_FR.ts  openmarketterminal_id_ID.ts  openmarketterminal_it_IT.ts  openmarketterminal_pt_BR.ts  openmarketterminal_tr_TR.ts  openmarketterminal_vi_VN.ts  openmarketterminal_zh_CN.ts  openmarketterminal_zh_HK.ts  openmarketterminal_zh_TW.ts
tools/: finn-loop.sh  sign-release.sh
trading-mcp-server/: .env.example  .gitignore  README.md  daily_observe.py  requirements.txt  server.py  test_place_order.py  tests_smoke.py  tests_thesis.py  weekly_review.py
trading-mcp-server/deploy/: com.openterminal.dailyobserve.plist  com.openterminal.weeklyreview.plist
trading-mcp-server/trading_mcp/: alpaca_tools.py  coinbase_tools.py  config.py  kraken_tools.py  safety.py  thesis.py  utils.py
(+2215 files in other folders)
